load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "eval",
    srcs = ["eval.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":main",
        "@pip//lm_eval",
        "@pip//omegaconf",
        "@pip//torch",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":main",
        "@pip//omegaconf",
        "@pip//torch",
        "@pip//tqdm",
        "@pip//xformers",
    ],
)

py_binary(
    name = "train",
    srcs = ["train.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":main",
        "@pip//numpy",
        "@pip//omegaconf",
        "@pip//torch",
        "@pip//wandb",
        "@pip//xformers",
    ],
)

py_library(
    name = "hello_lingua",
    srcs = ["hello_lingua.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":main",
    ],
)

py_library(
    name = "main",
    srcs = [
        "__init__.py",
        "eval.py",
        "generate.py",
        "hello_lingua.py",
        "train.py",
        "transformer.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//lm_eval",
        "@pip//numpy",
        "@pip//omegaconf",
        "@pip//torch",
        "@pip//tqdm",
        "@pip//wandb",
        "@pip//xformers",
    ],
)
